# code-bot

./: .flake8  .gitignore  noxfile.py  pyproject.toml
bot/: __main__.py  bot.py  config.py  piston.py
bot/plugins/: eval.py
bot/utils/: __init__.py
